# AI-KANBAN-Studio

./: Dockerfile  docker-compose.yml
.github/workflows/: codeql.yml
backend/: AGENTS.md  ai.py  auth.py  database.py  main.py  models.py  pyproject.toml
backend/tests/: test_api.py
docs/: DATABASE.md  PLAN.md  schema.json
frontend/: AGENTS.md
frontend/src/app/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: KanbanBoard.test.tsx  KanbanBoard.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
