[project]
name = "kanban-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "openai>=1.0",
    "python-dotenv>=1.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "httpx>=0.28",
    "pytest-asyncio>=0.24",
]
